# DXKuma-Bot

./: .gitignore  README.md  app.py  break.py  config_example.toml  developing.md  pyproject.toml  requirements.txt  start.py  test.py
base/: Base.py  QQUser.py
data/maimai/: b50_config.json
data/random_pic/: count.json
plugins/bot/conversation/: __init__.py
plugins/bot/help/: __init__.py
plugins/bot/new_member/: __init__.py
plugins/bot/poke/: __init__.py
plugins/bot/random_pic/: __init__.py
plugins/bot/repeater/: __init__.py  config.py
plugins/bot_manager/: __init__.py
plugins/eatwhat/: __init__.py
plugins/maimai/maiWordle/: GLOBAL_CONSTANT.py  __init__.py  database.py  utils.py
plugins/maimai/maimaiDX/: Config.py  GenB50.py  MusicInfo.py  __init__.py  main.py
plugins/perm_manager/: __init__.py
plugins/random_pic/: __init__.py
plugins/status_pic/: __init__.py
plugins/test/: __init__.py
static/: config_example.toml
util/: Config.py  Data.py  DataPasser.py  Database.py  Logger.py  Permission.py  PermissonManager.py  gen_status_img.py  run_timer.py
util/md_support/: __init__.py  button.py  md.py
