[tool.poetry]
name = "break-bot-2-0-re"
version = "0.1.0"
description = ""
authors = ["Kyoku急急急极 <feikongtl@gmail.com>"]
readme = "README.md"
packages = [{include = "break_bot_2"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
